tests/fixtures/valid/declarations/basic_strategy.pine
//@version=6
strategy("Basic Strategy")
strategy.entry("L", strategy.long)
