tests/fixtures/invalid/v6_migration/strategy_entry_when_removed.pine
//@version=6
strategy("x")
strategy.entry("L", strategy.long, when = close > open)
